Update Population Dashboard Codebase.ipynb

--- a/Population Dashboard Codebase.ipynb
+++ b/Population Dashboard Codebase.ipynb
@@ -15,7 +15,7 @@
    "id": "c18ba7b5-8fde-47ad-9a0f-78a5a2cf896f",
    "metadata": {},
    "source": [
-    "**Contributor: Selorm Komla Darkey*"
+    "**Contributor:** Selorm Komla Darkey"
    ]
   },
   {
